//==========================================================================
//
// History file for EvtGen
//
//===========================================================================

2nd December 2015 John Back
    From LHCb, added EvtKStopizmumu model for KS -> pi0 mu mu decays based on
    JHEP08(1998)004, courtesy of Veronika Chobanova, Diego Martinez Santos
    and Jeremy Dalseno. Added EvtConst::Fermi for Fermi coupling constant.

R01-05-00-------------------------------------------------------------------
21st October 2015 John Back
    New tag incorporating all changes below. Recommended external packages
    are HepMC 2.06.09, pythia 8.186, Photos++ 3.61 and Tauola++ 1.1.5.

    Added the EvtB2MuMuMuNu model for simulating the very rare four-leptonic 
    decays B- -> mu+ mu- anti-nu_mu mu-, courtesy Nikolai Nikitin.

16th October 2015 John Back
    Updated the configure script to automatically select the library names
    for PHOTOS++; version 3.56 and below uses Fortran, version 3.61 and above
    uses C++ only (default). Avoid using v3.60, since it does not work.
    This needs the PHOTOS libraries built before EvtGen is configured.
    Modified setupEvtGen.sh to use Photos++ v3.61.

7th October 2015 John Back
    Updated EvtGenExternal/EvtPhotosEngine to check that additional particles
    from the outgoing vertex are indeed (FSR) photons, since later versions of 
    PHOTOS introduce pair emission, where particles may not always be photons.

    Added the genRootDecayChain.cc validation program to create ROOT files 
    containing information about the complete decay tree. Two example test
    decay files BKstarGamma.dec and BuDst0rhop.dec can be used with this; the
    first tests PHOTOS, the second looks at sequential decay chain storage.
    The plotBKstarGamma.C ROOT macro can be used for B -> K* gamma plots.

2nd October 2015 John Back    
    Modified EvtSVPHelAmp and added a new EvtSVPHelCPMix model, implementing 